# KKTerm

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  README.de.md  README.es-MX.md  README.es.md  README.fr.md  README.id.md  README.it.md  README.ja.md  README.ko.md  README.md  README.pt-BR.md  README.th.md  README.vi.md  README.zh-CN.md  README.zh-TW.md  design-qa.md  eslint.config.js  latest.json  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.cargo/: config.toml
.codex/environments/: environment.toml
.design-sync/: NOTES.md  build-css.mjs  config.json  conventions.md  entry.tsx  kkterm-ds.css  preview-provider.tsx
.design-sync/previews/: ColorPalettePicker.tsx  ConfirmSheet.tsx  ModuleHeader.tsx  Sheet.tsx  ToggleSwitch.tsx
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy-landing-site.yml  release-linux.yml  release.yml
assistant-skills/dashboard-data-visualization/: SKILL.md
assistant-skills/dashboard-widget-builder/: SKILL.md
assistant-skills/dashboard-widget-designer/: SKILL.md
assistant-skills/desktop-accessibility-ui/: SKILL.md
assistant-skills/dns-dhcp-troubleshooter/: SKILL.md
assistant-skills/firewall-port-troubleshooter/: SKILL.md
assistant-skills/network-connectivity-troubleshooter/: SKILL.md
assistant-skills/tls-certificate-troubleshooter/: SKILL.md
cloudflare/release-worker/: worker-configuration.d.ts  wrangler.jsonc
docs/: AIINSTRUCTIONS.md  AI_PROVIDERS.md  ANTIVIRUS.md  ARCHITECTURE.md  ASSISTANT_SKILLS.md  DASHBOARD.md  DESIGN_LANGUAGE.md  FILE_VIEWER_ANALYSIS.md  FLEET.md  ITOPS.md  LINUX_PORT.md  LOCALIZATION.md  MCP.md  PERFORMANCE.md  PORTABLE.md  PRD.md  PROMOTION.md  RDP_ACTIVEX_GOTCHAS.md  RELEASE.md  ROADMAP.md  SCREENSHOTS.md  SITE.md  TERMINAL_COMPATIBILITY_CHECKLIST.md  index.html  robots.txt  sitemap.xml  windows-arm-compatibility.md
docs/ADR/: 0001-product-scope.md  0002-technology-stack.md  0003-security-privacy.md  0004-ssh-transport-library.md  0011-it-ops-module.md  (+7 more)
installer/: catalog.v1.json
scripts/: check-locale-keys.mjs  generate-release-notes.mjs  measure-ssh-readiness.ps1  normalize-locale-order.mjs  package-installer-arm64.ps1  package-installer.ps1  package-linux.sh  package-macos.sh  package-portable.ps1  prepare-macos-sidecars.sh  prepare-tauri-sidecars.ps1  release-github-both-arch.ps1  release-github-linux.sh  release-github-macos.sh  release-github.ps1  release-mirror-model.mjs  smoke-installer.ps1  smoke-portable.ps1  sync-cloudflare-release.mjs  sync-terminal-colors-catalog.mjs  vite-widget-lib-bundle.ts
src/: App.css  App.tsx  app-defaults.ts  main.tsx  sample-data.ts  store.ts  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json  macos-updater.json
src-tauri/src/: ai.rs  ai_coding_usage.rs  app_launcher.rs  app_paths.rs  app_tray.rs  app_updates.rs  assistant_skills.rs  auto_start.rs  bundle_identifier.rs  currency_rates.rs  dashboard_commands.rs  dashboard_storage.rs  dashboard_validation.rs  debug_heartbeat.rs  desktop_wallpaper.rs  diagnostics.rs  favicon.rs  file_viewer.rs  ftp.rs  git.rs  github_copilot.rs  import.rs  lib.rs  linux_env.rs  logging.rs  main.rs  manual.rs  mcp.rs  mcp_bridge.rs  mcp_tool_catalog.rs  media.rs  native_tooltip.rs  pc_info.rs  performance.rs  portable_creator.rs  portable_marker.rs  portable_single_instance.rs  power.rs  rdp.rs  rdp_client.rs  (+21 more)
src-tauri/src/ai/: cli_backend.rs  email.rs  openai_provider.rs  prompt_contracts.rs  providers.rs  streaming.rs  tests.rs  web_search.rs
src-tauri/src/ai/providers/: gemini.rs  nvidia.rs  ollama_cloud.rs
src-tauri/src/installer/: cache.rs  catalog.rs  commands.rs  detect.rs  events.rs  install.rs  latest_version.rs  managed_app.rs  mod.rs  options.rs  proc.rs  schema.rs  state.rs  trust.rs  uninstall.rs  wsl.rs
src-tauri/src/itops/: actions.rs  automation_commands.rs  automation_storage.rs  commands.rs  fleet_storage.rs  host_storage.rs  ids.rs  inventory.rs  mod.rs  run_storage.rs  runner.rs  site_storage.rs  storage.rs  task_commands.rs  task_storage.rs  types.rs
src-tauri/src/net/: commands.rs  dns.rs  interfaces.rs  mod.rs  ping.rs  proxy.rs  scan.rs  stream.rs  whois.rs  wol.rs
src-tauri/src/secrets/: file_store.rs  sqlite_store.rs
src-tauri/src/storage/: connections.rs  durable_ui_state.rs  settings.rs  tests.rs
src-tauri/src/watchdog/: catalog.rs  commands.rs  mod.rs  registry.rs  session_activity.rs  targets.rs  types.rs
tests/: abstract-dynamic-backgrounds.test.mjs  activity-rail-child-shortcut.test.mjs  activity-rail-connected-drag-performance.test.mjs  activity-rail-order.test.ts  activity-rail-visibility-settings.test.mjs  ai-cli-status-persistence.test.mjs  ai-coding-usage-display.test.mjs  ai-coding-usage-refresh-policy.test.mjs  ai-coding-usage-settings.test.mjs  app-updates-model.test.mjs  assistant-chat-threads.test.ts  assistant-composer-helpers.test.ts  assistant-composer-intents.test.mjs  assistant-context-usage-meter.test.mjs  assistant-plan-update.test.ts  assistant-response-layout.test.mjs  assistant-scroll-follow.test.ts  assistant-secret-storage-copy.test.mjs  assistant-send-reveals-panel.test.mjs  assistant-settings-lifecycle.test.mjs  assistant-stream-message.test.mjs  assistant-working-status.test.mjs  brand-icon-catalog.test.ts  built-in-mcp-settings.test.mjs  child-connection-single-collapse.test.mjs  cli-account-environment.test.ts  color-scheme-match-os.test.mjs  compare-word-wrap-default.test.mjs  connection-add-notification.test.mjs  connection-dialog-layout.test.mjs  connection-duplicate-name.test.ts  connection-duplicate-ui.test.mjs  connection-environment-variables.test.ts  connection-import-bookmark-loading.test.mjs  connection-import-ssh-config.test.mjs  connection-panorama-guard.test.ts  connection-tree-canvas-dock.test.ts  connection-tree-connected-filter.test.ts  connection-tree-double-click-selection.test.mjs  connection-tree-keyboard-shortcuts.test.mjs  (+259 more)
www/: _headers  index.html
(+2743 files in other folders)
