[package]
name = "kkterm"
version = "0.1.73"
description = "Fast local-first administration workspace for terminals, SSH, SFTP, and approval-based command assistance."
authors = ["Ryan Tsai"]
license = "MIT"
edition = "2024"
rust-version = "1.96"
default-run = "kkterm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kkterm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "protocol-asset"] }
tauri-plugin-opener = "2"
anyhow = "1.0.102"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream", "form", "blocking"] }
sha2 = "0.10"
# Do not enable default features here: github-copilot-sdk defaults to bundling
# the Copilot CLI, which bloats the KKTerm installer by embedding a large binary.
github-copilot-sdk = { version = "1.0.0", default-features = false }
rand = "0.9"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
portable-pty = "0.9.0"
keyring-core = "1.0.0"
russh = { version = "0.60.0", default-features = false, features = ["flate2", "ring", "rsa"] }
russh-sftp = "2.1.2"
suppaftp = { version = "=7.1.0", default-features = false, features = ["tokio", "tokio-async-native-tls", "deprecated"] }
async-native-tls = { version = "0.5", default-features = false, features = ["runtime-tokio"] }
serial2 = "0.2.37"
tokio = { version = "1.52.3", features = ["io-std", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
url = "2"
scraper = "0.27"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
vnc = { package = "vnc-rs", path = "vendor/vnc-rs" }
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }
zip = "8"
futures = "0.3"
filedescriptor = "0.8.3"
lazy_static = "1.5.0"
shared_library = "0.1.9"
winapi = "0.3.9"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "rustls-tls"] }

# AST-based validation of AI-authored script widget source. oxc is ~3x faster
# than swc on the parse-only path and ships a stable visitor API for
# IdentifierReference walks. Used by validate_script_body_json_detailed.
oxc_allocator = "0.132"
oxc_parser = "0.132"
oxc_span = "0.132"
oxc_ast = "0.132"
oxc_ast_visit = "0.132"

# Network admin tools - AV-friendly choices.
# MVP scope: DNS, ping, port scan/check, WoL, interfaces, WHOIS. SNMP + traceroute deferred.
hickory-resolver = "0.26"
if-addrs = "0.15"
tokio-util = { version = "0.7", features = ["rt"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_Graphics", "Win32_Graphics_Direct3D", "Win32_Graphics_Direct3D11", "Win32_Graphics_Dwm", "Win32_Graphics_Dxgi", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_Gdi", "Win32_System_Com", "Win32_System_DataExchange", "Win32_System_LibraryLoader", "Win32_System_Memory", "Win32_System_Ole", "Win32_System_Variant", "Win32_UI_Controls", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
windows-core = "=0.61.2"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_NetworkManagement_IpHelper", "Win32_NetworkManagement_Ndis", "Win32_Storage_FileSystem", "Win32_System_Com", "Win32_System_Console", "Win32_System_DataExchange", "Win32_System_LibraryLoader", "Win32_System_Memory", "Win32_System_Ole", "Win32_System_Power", "Win32_System_ProcessStatus", "Win32_System_Registry", "Win32_System_Shutdown", "Win32_System_SystemInformation", "Win32_System_Threading", "Win32_UI_Controls", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
windows-native-keyring-store = "1.0.0"
webview2-com = "=0.38.2"
tauri-plugin-single-instance = "2"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1.0.0", features = ["keychain"] }
# Host monitoring (Status Bar CPU/RAM/Network + detailed Dashboard counters).
# macOS-only: the Windows path uses hand-rolled Win32 calls in performance.rs.
sysinfo = "0.39"
# CFString construction for the IOKit power assertion used by Don't Sleep.
# IOKit itself links as a system framework via #[link] in power.rs.
core-foundation-sys = "0.8"

[target.'cfg(all(target_os = "windows", any(target_arch = "x86", target_arch = "x86_64")))'.dependencies]
# AV mitigation #1: use IcmpSendEcho2 via winping (NOT raw sockets) on Windows.
winping = "0.10"

[target.'cfg(not(target_os = "windows"))'.dependencies]
# Unix ICMP via surge-ping (raw sockets - Unix users typically have CAP_NET_RAW or root).
# Windows uses winping instead (see Windows target block above).
surge-ping = "0.8"
# macOS RDP client via IronRDP (Windows uses the native ActiveX path in rdp.rs instead).
# The umbrella crate pins a mutually-compatible sub-crate set.
# ironrdp-tokio re-exports all of ironrdp-async (connect_begin, connect_finalize,
# mark_as_upgraded, NetworkClient) via `pub use ironrdp_async::*`, so no separate
# ironrdp-async dep is needed. The umbrella `input` feature re-exports ironrdp-input v0.6,
# so no separate ironrdp-input dep is needed either.
ironrdp = { version = "0.15", features = ["connector", "session", "graphics", "pdu", "input"] }
ironrdp-tokio = "0.9"
tokio-rustls = "0.26"
# NOTE: sspi = "0.21" (needed for CredSSP/NTLM) is a transitive dep of ironrdp-connector.
# It is omitted here as a direct dep because ironrdp-connector already pulls it in.
# To add direct sspi usage in Task 4: sspi = { version = "0.21", default-features = false }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
opt-level = "s"

[profile.dev]
opt-level = 1





















[[bin]]
name = "kkterm-cli"
path = "src/bin/kkterm-cli.rs"
